[cmm]-added swagger documentation